@startuml

title __EIGHTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct.eighth {
    class cn.shui.learning_plan.datastruct.eighth.L206 {
        + reverseList1()
        + reverseList2()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eighth {
    class cn.shui.learning_plan.datastruct.eighth.L206.ListNode {
        ~ val : int
        ~ ListNode()
        ~ ListNode()
        ~ ListNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eighth {
    class cn.shui.learning_plan.datastruct.eighth.L83 {
        + deleteDuplicates1()
        + deleteDuplicates2()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eighth {
    class cn.shui.learning_plan.datastruct.eighth.L83.ListNode {
        ~ val : int
        ~ ListNode()
        ~ ListNode()
        ~ ListNode()
    }
  }
  

  cn.shui.learning_plan.datastruct.eighth.L206 +-down- cn.shui.learning_plan.datastruct.eighth.L206.ListNode
  cn.shui.learning_plan.datastruct.eighth.L206.ListNode o-- cn.shui.learning_plan.datastruct.eighth.L206.ListNode : next
  cn.shui.learning_plan.datastruct.eighth.L83 +-down- cn.shui.learning_plan.datastruct.eighth.L83.ListNode
  cn.shui.learning_plan.datastruct.eighth.L83.ListNode o-- cn.shui.learning_plan.datastruct.eighth.L83.ListNode : next


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
